kustomizations/services/temporal/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: temporal
  namespace: temporal
  labels:
    app_name: epp
    app_env: ${app_env}
    app_tier: import
spec:
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: temporal
  template:
    metadata:
      namespace: temporal
      labels:
        app: temporal
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
      - name: epp-server
        image: ghcr.io/elifesciences/temporal-cli:latest
        resources:
          requests:
            cpu: "100m"
          limits:
            memory: "500Mi"
        ports:
        - containerPort: 7233
        - containerPort: 8233
