kustomizations/services/temporal/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: temporal
  namespace: temporal
  labels:
    app_name: epp
    app_env: ${app_env}
    app_tier: import
spec:
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: temporal
  template:
    metadata:
      namespace: temporal
      labels:
        app: temporal
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
      - name: epp-server
        image: ghcr.io/elifesciences/temporal-cli:latest
        command:
          - "/temporal"
          - "server"
          - "start-dev"
          - "--namespace"
          - "default"
          - "--ip"
          - "0.0.0.0"
          - "--metrics-port"
          - "9233"
          - "--db-filename"
          - "/data/temporal.sqlite"
        resources:
          requests:
            cpu: "100m"
          limits:
            memory: "500Mi"
        ports:
        - containerPort: 7233
        - containerPort: 8233
        - containerPort: 9233
        volumeMounts:
        - name: temporal-data
          mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: temporal-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 10Gi
