kustomizations/services/temporal/service-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: temporal-ui
  namespace: temporal
  labels:
    app_name: epp
    app_env: ${app_env}
    app_tier: import
spec:
  selector:
    app: temporal
  ports:
  - port: 8233
